--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,8 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
+
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -244,6 +240,14 @@
             <artifactId>druid</artifactId>
             <version>1.1.14</version>
         </dependency>
+
+        <!--shiro框架包-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-all</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
 
     </dependencies>
 
